--- a/index.html
+++ b/index.html
@@ -80,32 +80,35 @@
                     <img id="id_photo" src="img/art/cange.jpeg" alt="foto cange">
                     <figcaption>Reginald Cange</figcaption>
                 </figure>
-                <div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Bref</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th>Bon Non:</th>
-                                <th>AKA</th>
-                                <th>Dat Nesans</th>
-                                <th>djaz</th>
-                                <th>vil</th>
-                                <th>stil mizik</th>
-                            </tr>
-                            <tr>
-                                <td>Reginald Cange</td>
-                                <td>Pè Las</td>
-                                <td>23/14/1982</td>
-                                <td>Zenglen, Fasil</td>
-                                <td>Port-Salut</td>
-                                <td>compas</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Bref</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Bon Non:</th>
+                            <th>AKA</th>
+                            <th>Dat Nesans</th>
+                            <th>djaz</th>
+                            <th>vil</th>
+                            <th>stil mizik</th>
+                        </tr>
+                        <tr>
+                            <td>Reginald Cange</td>
+                            <td>Pè Las</td>
+                            <td>23/14/1982</td>
+                            <td>Zenglen, Fasil</td>
+                            <td>Port-Salut</td>
+                            <td>compas</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="pub">
+                    <a href="">
+                        <img src="img/ads/80-percent-off.jpg" alt="pubs logo">
+                    </a>
                 </div>
             </header>
             <section>
@@ -130,14 +133,13 @@
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
                 </p>
             </section>
-
-            <section class="ref">
+            <aside class="ref">
                 <h4>Kèk lòt Referans</h4>
                 <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
                 <a href="http://www.youtube.com/pilwenkezye">kompaevents</a>
                 <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
                 <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
-            </section>
+            </aside>
         </main>
         <footer class="foorer-pages">
 
