some big modification

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <header class="header-pages">
             <div class="social-contact">
                 <a href="http://www.facebook.com/hmibio">
+                    <img src="img/icon/add-user.png" alt="">
+                </a>
+                <a href="http://www.twitter.com/hmibio">
+                    <img src="img/icon/music.png" alt="">
+                </a>
+                <a href="http://www.instagram.com/hmibio">
+                    <img src="img/icon/info-blog.png" alt="">
+                </a>
+                <a href="http://www.facebook.com/hmibio">
                     <img src="img/social/fb.png" alt="">
                 </a>
                 <a href="http://www.twitter.com/hmibio">
@@ -27,7 +36,7 @@
                 <a href="#">brand new</a>
                 <a href="#">email/info</a>
                 <a href="#">ht mizik</a>
-                <a href="#">login</a>
+                <a href="login.html">login</a>
                 <div class="hide-for-mobile">
                     Haitian Music Biography
                 </div>
@@ -47,7 +56,7 @@
                     <option value="izolan">izolan</option>
                     <option value="brutus">brutus</option>
                     <option value="eud">Princess Eud</option>
-                    <option value="t-joe">t-joe</option>
+                    <option value="tjoe">tjoe</option>
                     <option value="ritchie"> ritchie </option>
                     <option value="shabba">shabba</option>
                     <option value="jperry">jperry</option>
@@ -112,35 +121,59 @@
                 </div>
             </header>
             <section>
-                <h3>Komansman Lavi l</h3>
+                <h3 class="subHeading">Komansman Lavi l</h3>
                 <p class="beginning-life">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, 
+                    recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam rerum aliquam expedita error. Sint facere, 
+                    delectus suscipit eius consequuntur nihil esse aliquam quas necessitatibus odit a odio perspiciatis accusamus.
                 </p>
             </section>
             <section>
-                <h3>Karyel ak Pasion l</h3>
-                <p>
+                <h3 class="subHeading">Karyel ak Pasion l</h3>
+                <p class="">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Vero voluptatum pariatur sequi eligendi impedit praesentium ex perferendis culpa at delectus? Earum incidunt quisquam autem maxime? At odio alias fugiat ducimus.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum hic, quas error distinctio tempora sunt. 
+                    Rem minus, consectetur magni quam excepturi voluptas repellat, eveniet aut officia atque, ipsa non nam.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, repellendus hic esse unde eum, 
+                    illo sequi atque, doloribus fugiat cumque vero eligendi pariatur natus. Ad fugiat explicabo laboriosam animi minima.
                 </p>
             </section>
             <aside class="ref">
                 <h4>Kèk lòt Referans</h4>
                 <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
-                <a href="http://www.youtube.com/pilwenkezye">kompaevents</a>
+                <a href="http://www.youtube.com/">kompaevents</a>
                 <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
                 <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
             </aside>
+            <aside>
+                <div>
+                    <h1>diskografi</h1>
+                    <ul>
+                        <li><a href="">I need you</a></li>
+                        <li><a href="">Lago Cache</a></li>
+                        <li><a href="">Ou banm mant</a></li>
+                        <li><a href="">Fanmi Lanmou</a></li>
+                        <li><a href="">Ti pouchon</a></li>
+                        <li><a href="">Promise</a></li>
+                        <li><a href="">18 ans</a></li>
+                    </ul>
+                </div>
+            </aside>
         </main>
+
         <footer class="foorer-pages">
 
             <nav>
