--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
                 </a>
             </div>
             <nav>
-                <a href="#">brand new</a>
+                <a href="#" title="mizik ki soti nan denye mwa yo">brand new</a>
+                <a href="#" title="itunes , amazon , google mizik">ht mizik</a>
+                <a href="#" title="itunes , amazon , google mizik">magazine</a>
                 <a href="#">email/info</a>
-                <a href="#">ht mizik</a>
                 <a href="login.html">login</a>
+                <a href="support.html">bay sipò w</a>
                 <div class="hide-for-mobile">
-                    Haitian Music Biography
+                    Haitian Music Industry Biography
                 </div>
             </nav>
             <div class="search-container">
-                <input type="search" list="selectedImages" id="myInputImgages" name="myBrowser" placeholder="chèche..." />
+                <input type="search" list="selectedImages" id="myInputImgages" name="myBrowser"
+                    placeholder="chèche..." />
                 <input type="image" src="img/search.png" alt="icon rechech" id="search">
             </div>
             <form name="myForm">
@@ -83,7 +86,8 @@
                 </datalist>
             </form>
         </header>
-        <main>
+    <section id="main-content-container">
+        <main class="main-main">
             <header class="artist-resume">
                 <figure>
                     <img id="id_photo" src="img/art/cange.jpeg" alt="foto cange">
@@ -123,42 +127,45 @@
             <section>
                 <h3 class="subHeading">Komansman Lavi l</h3>
                 <p class="beginning-life">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
                     recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam rerum aliquam expedita error. Sint facere, 
-                    delectus suscipit eius consequuntur nihil esse aliquam quas necessitatibus odit a odio perspiciatis accusamus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam rerum aliquam expedita
+                    error. Sint facere,
+                    delectus suscipit eius consequuntur nihil esse aliquam quas necessitatibus odit a odio perspiciatis
+                    accusamus.
                 </p>
             </section>
             <section>
                 <h3 class="subHeading">Karyel ak Pasion l</h3>
                 <p class="">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
+                    recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Vero voluptatum pariatur sequi eligendi impedit praesentium ex perferendis culpa at delectus? Earum incidunt quisquam autem maxime? At odio alias fugiat ducimus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Vero voluptatum pariatur sequi eligendi impedit praesentium ex perferendis culpa at delectus? Earum
+                    incidunt quisquam autem maxime? At odio alias fugiat ducimus.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
+                    recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum hic, quas error distinctio tempora sunt. 
-                    Rem minus, consectetur magni quam excepturi voluptas repellat, eveniet aut officia atque, ipsa non nam.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum hic, quas error distinctio tempora
+                    sunt.
+                    Rem minus, consectetur magni quam excepturi voluptas repellat, eveniet aut officia atque, ipsa non
+                    nam.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam, recusandae adipisci porro
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
+                    recusandae adipisci porro
                     officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, repellendus hic esse unde eum, 
-                    illo sequi atque, doloribus fugiat cumque vero eligendi pariatur natus. Ad fugiat explicabo laboriosam animi minima.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, repellendus hic esse unde eum,
+                    illo sequi atque, doloribus fugiat cumque vero eligendi pariatur natus. Ad fugiat explicabo
+                    laboriosam animi minima.
                 </p>
             </section>
-            <aside class="ref">
-                <h4>Kèk lòt Referans</h4>
-                <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
-                <a href="http://www.youtube.com/">kompaevents</a>
-                <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
-                <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
-            </aside>
-            <aside>
+
+            <aside class="aside-content">
                 <div>
                     <h1>diskografi</h1>
                     <ul>
@@ -172,10 +179,30 @@
                     </ul>
                 </div>
             </aside>
+            <aside class="ref-link">
+                <h4>Kèk lòt Referans</h4>
+                <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
+                <a href="http://www.youtube.com/">kompaevents</a>
+                <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
+                <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
+            </aside>
         </main>
-
+        <!--I want to put a section, where people can go to see  -->
+        <aside class="side-menu side-bar">
+            <ul>
+                <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
+                <li><a href="">Atis Moman</a></li>
+                <li><a href="de jan ane a dec ">Mizik Moman</a></li>
+                <li><a href="">Maestro yo</a></li>
+                <li><a href="">Yayad ak Gouyad</a></li>
+                <li><a href="">Keyboardist|Pianist</a></li>
+                <li><a href="">Guitarist</a></li>
+                <li><a href="">Animatè</a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </aside>
+    </section>
         <footer class="foorer-pages">
-
             <nav>
                 <a href="#">contakte</a>
                 <a href="">feedback</a>
