--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HMIBIO</title>
+    <link rel="stylesheet" href="assets/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="css/index.css">
+
 </head>
 
 <body>
-    <div id="wrapper">
-        <header class="header-pages">
-            <div class="social-contact">
+    <header class="header-page">
+        <div class="social-contact">
+            <div class="">
+                <a href="http://www.youtube.com/hmibio">
+                    <img src="img/social/youtube.png" alt="">
+                </a>
+                <a href="http://www.instagram.com/hmibio">
+                    <img src="img/social/insta-icon.jpeg" alt="">
+                </a>
+                <a href="http://www.facebook.com/hmibio">
+                    <img src="img/social/fb.png" alt="">
+                </a>
+                <a href="http://www.twitter.com/hmibio">
+                    <img src="img/social/twitter-icon.png" alt="">
+                </a>
                 <a href="http://www.facebook.com/hmibio">
                     <img src="img/icon/add-user.png" alt="">
                 </a>
@@ -22,33 +36,34 @@
                 <a href="http://www.instagram.com/hmibio">
                     <img src="img/icon/info-blog.png" alt="">
                 </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/social/fb.png" alt="">
-                </a>
-                <a href="http://www.twitter.com/hmibio">
-                    <img src="img/social/twitter-icon.png" alt="">
-                </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/social/insta-icon.jpeg" alt="">
-                </a>
             </div>
-            <nav>
-                <a href="#" title="mizik ki soti nan denye mwa yo">brand new</a>
-                <a href="#" title="itunes , amazon , google mizik">ht mizik</a>
-                <a href="#" title="itunes , amazon , google mizik">magazine</a>
-                <a href="#">email/info</a>
+        </div>
+        <hr />
+        <div class="landing-nav">
+            <div class="landing-nav-subcontainer">
+                <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
+                <a href="buymusic.html" title="itunes , amazon , google mizik">ht mizik</a>
+                <a href="#" title="tcket , kompaevents , wiki mizik">magazine</a>
+                <a href="#">info</a>
                 <a href="login.html">login</a>
-                <a href="support.html">bay sipò w</a>
-                <div class="hide-for-mobile">
+                <a href="support.html">sipò ou</a>
+                <div class="landing">
                     Haitian Music Industry Biography
                 </div>
-            </nav>
-            <div class="search-container">
-                <input type="search" list="selectedImages" id="myInputImgages" name="myBrowser"
-                    placeholder="chèche..." />
-                <input type="image" src="img/search.png" alt="icon rechech" id="search">
             </div>
-            <form name="myForm">
+        </div>
+        <nav>
+            <div class="nav-wrapper">
+                <form>
+                    <div class="input-field">
+                        <input type="search" list="selectedImages" id="search" name="myBrowser" class="input-search"
+                            placeholder="search here..." />
+                        <!-- <label for="search"> <i class="material-icon">search</i></label> -->
+                    </div>
+                </form>
+            </div>
+        </nav>
+        <!-- <form name="myForm">
                 <datalist id="selectedImages">
                     <option value="sanders">sanders solon</option>
                     <option value="martelly">michel joseph martelly </option>
@@ -84,17 +99,23 @@
                     <option value="micholina">micholina</option>
                     <option value="renaldo">Renaldo Martino</option>
                 </datalist>
-            </form>
-        </header>
-    <section id="main-content-container">
-        <main class="main-main">
+            </form> -->
+    </header>
+    <main id="main-content-container">
+        <!-- THIS SECTION WILL BE WHEN SOMEONE SEARCH FOR SOMETHNG , IT WILL SHOW 
+        THE INFORMATION OF THE PERSON REQUESTED. BECAUSE THERE WILL BE RANDOM
+        SECTION WITH ARTIST , OF THE MOMENT, PERSON OF THE MOMENT IT SHOULD BE
+        RELATED TO MUSIC. AND ALSO A MUSIC/ARTIST/ALBUM/ OF THE MOMENT ,
+        LINK ON SHOW OF THE MOMENT
+        -->
+       <!--  <section class="main-main">
             <header class="artist-resume">
                 <figure>
                     <img id="id_photo" src="img/art/cange.jpeg" alt="foto cange">
                     <figcaption>Reginald Cange</figcaption>
                 </figure>
-                <table>
-                    <thead>
+                <table class="centered">
+                     <thead class="table-header">
                         <tr>
                             <th>Bref</th>
                         </tr>
@@ -118,100 +139,138 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="pub">
+                <div class="pub ads">
                     <a href="">
                         <img src="img/ads/80-percent-off.jpg" alt="pubs logo">
                     </a>
                 </div>
             </header>
-            <section>
-                <h3 class="subHeading">Komansman Lavi l</h3>
-                <p class="beginning-life">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
-                    recusandae adipisci porro
-                    officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam rerum aliquam expedita
-                    error. Sint facere,
-                    delectus suscipit eius consequuntur nihil esse aliquam quas necessitatibus odit a odio perspiciatis
-                    accusamus.
+            <section class="main-section-division">
+                <h3 class="main-section-division-heading">Komansman Lavi l</h3>
+                <p class="beginning-life flow-text">
+
                 </p>
             </section>
-            <section>
-                <h3 class="subHeading">Karyel ak Pasion l</h3>
-                <p class="">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
-                    recusandae adipisci porro
-                    officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vero voluptatum pariatur sequi eligendi impedit praesentium ex perferendis culpa at delectus? Earum
-                    incidunt quisquam autem maxime? At odio alias fugiat ducimus.
+            <section class="main-section-division">
+                <div>
+                    <h3 class=main-section-division-heading>Karyel ak Pasion l</h3>
+                    <p class="flow-text">
+
+                    </p>
+                </div>
+
+                <p class="flow-text">
+
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
-                    recusandae adipisci porro
-                    officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum hic, quas error distinctio tempora
-                    sunt.
-                    Rem minus, consectetur magni quam excepturi voluptas repellat, eveniet aut officia atque, ipsa non
-                    nam.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi corporis assumenda? Quisquam,
-                    recusandae adipisci porro
-                    officia u labore asperiores quaerat quo corrupti error commodi provident atque tenetur.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, repellendus hic esse unde eum,
-                    illo sequi atque, doloribus fugiat cumque vero eligendi pariatur natus. Ad fugiat explicabo
-                    laboriosam animi minima.
+                <p class="flow-text">
+
                 </p>
             </section>
 
-            <aside class="aside-content">
-                <div>
+            <aside class="aside-content ">
+                <div class="">
                     <h1>diskografi</h1>
-                    <ul>
-                        <li><a href="">I need you</a></li>
-                        <li><a href="">Lago Cache</a></li>
-                        <li><a href="">Ou banm mant</a></li>
-                        <li><a href="">Fanmi Lanmou</a></li>
-                        <li><a href="">Ti pouchon</a></li>
-                        <li><a href="">Promise</a></li>
-                        <li><a href="">18 ans</a></li>
+                    <ul class="collection">
+                        <li class="collection-item"><a href="">I need you</a></li>
+                        <li class="collection-item"><a href="">Lago Cache</a></li>
+                        <li class="collection-item"><a href="">Ou banm mant</a></li>
+                        <li class="collection-item"><a href="">Fanmi Lanmou</a></li>
+                        <li class="collection-item"><a href="">Ti pouchon</a></li>
+                        <li class="collection-item"><a href="">Promise</a></li>
+                        <li class="collection-item"><a href="">18 ans</a></li>
                     </ul>
                 </div>
             </aside>
             <aside class="ref-link">
-                <h4>Kèk lòt Referans</h4>
-                <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
-                <a href="http://www.youtube.com/">kompaevents</a>
-                <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
-                <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-content">
+                                <div>
+                                    <h4 class="subtitle card-title">Kèk lòt Referans</h4>
+                                    <p>this where you can find some link or referencces about 
+                                        this documment. 
+                                    </p>
+                                </div>
+                                <div class="card-action black">
+                                    <a href="http://www.youtube.com/pilwenkezye">pilwenkezye</a>
+                                    <a href="http://www.youtube.com/">kompaevents</a>
+                                    <a href="http://www.wikipedia.com/pilwenkezye">wikipedia</a>
+                                    <a href="http://www.youtube.com/pilwenkezye">ayiticom</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </aside> -->
+
+            <!--I want to put a section, where people can go to see  -->
+            <aside class="side-menu side-bar">
+                <ul>
+                    <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
+                    <li><a href="">Atis Moman</a></li>
+                    <li><a href="">Mizik Moman</a></li>
+                    <li><a href="">Maestro yo</a></li>
+                    <li><a href="">Yayad ak Gouyad</a></li>
+                    <li><a href="">Keyboardist|Pianist</a></li>
+                    <li><a href="">Guitarist</a></li>
+                    <li><a href="">Animatè</a></li>
+                </ul>
             </aside>
-        </main>
-        <!--I want to put a section, where people can go to see  -->
-        <aside class="side-menu side-bar">
-            <ul>
-                <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
-                <li><a href="">Atis Moman</a></li>
-                <li><a href="de jan ane a dec ">Mizik Moman</a></li>
-                <li><a href="">Maestro yo</a></li>
-                <li><a href="">Yayad ak Gouyad</a></li>
-                <li><a href="">Keyboardist|Pianist</a></li>
-                <li><a href="">Guitarist</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href=""></a></li>
+            <ul class="collection with-header">
+                <li class="collection-header"><h4>related artist</h4> </li>
+                <li class="collection-item avatar">
+                    <img src="img/art/alan_cave.jpg" alt="alan cave" class="circle">
+                    <span class="title">bouch</span>
+                    <p>
+                        timeless <br>
+                        2016
+                    </p>
+                    <a href="#!" class="secondary-content">
+                        <i class="material-icons">grade</i>
+                    </a>
+                </li>
+                <li class="collection-item avatar">
+                    <img src="img/art/nickenson.jpeg" alt="alan cave" class="circle">
+                    <span class="title">bouch</span>
+                    <p>
+                        timeless <br>
+                        2016
+                    </p>
+                    <a href="#!" class="secondary-content">
+                        <i class="material-icons">grade</i>
+                    </a>
+                </li>
+                <li class="collection-item avatar">
+                    <img src="img/art/arly.jpg" alt="alan cave" class="circle">
+                    <span class="title">Loving you</span>
+                    <p>
+                        encyclopedie <br>
+                        2016
+                    </p>
+                    <a href="#!" class="secondary-content">
+                        <i class="material-icons">grade</i>
+                    </a>
+                </li>
+
             </ul>
-        </aside>
     </section>
-        <footer class="foorer-pages">
-            <nav>
-                <a href="#">contakte</a>
-                <a href="">feedback</a>
-                <a href="">sèvis</a>
-                <a href="">politik nou</a>
-                <a href="">tèm ak condisyon</a>
-            </nav>
-        </footer>
-    </div>
+    </main>
+    <footer class="page-footer black">
+        <div class="footer-link">
+            <a href="#">contakte</a>
+            <a href="">feedback</a>
+            <a href="">sèvis</a>
+            <a href="">politik nou</a>
+            <a href="">tèm ak condisyon</a>
+        </div>
+        <div class="footer-copyright">
+            <div class="container center">
+                @copyright: <span class="copyright-date">2019</span>
+            </div>
+        </div>
+    </footer>
+    <script src="assets/lib/materialize/js/materialize.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
