change the link

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
                 <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
-                <a href="buymusic.html" title="itunes , amazon , google mizik">ht mizik</a>
-                <a href="#" title="tcket , kompaevents , wiki mizik">gallery</a>
+                <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
+                <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
                 <a href="#">info</a>
                 <a href="login.html">login</a>
-                <a href="support.html">sipò ou</a>
+                <a href="support.html">donate</a>
                 <div class="landing">
                     Haitian Music Industry Biology
                 </div>
