--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         <nav>
             <a href="#">brand new</a>
             <a href="#">email/info</a>
-            <a href="#">ht mizik</a>
+            <a href="#">buy it now</a>
             <a href="login.html">login</a>
             <div class="hide-for-mobile">
                 Haitian Music Biography
