alradyputthe aside menu, for desktop and tablets

--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                 </a>
             </div>
         </div>
-        <hr />
+        <hr class="hide-on-large-only"/>
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
                 <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
