--- a/gallery.html
+++ b/gallery.html
@@ -181,6 +181,13 @@
             </div>
         </div>
     </footer>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2547029064589448",
+    enable_page_level_ads: true
+  });
+    </script>
     <script src="assets/lib/materialize/js/materialize.min.js"></script>
     <script src="js/index.js"></script>
 
